--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@airswap/light": "^2.2.0",
     "@airswap/metadata": "1.0.1",
     "@airswap/order-utils": "^0.3.20",
+    "@ethersproject/networks": "^5.5.2",
     "@portis/web3": "^2.0.0-beta.16",
     "axios": "^0.18.0",
     "dotenv": "^8.2.0",
